--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,32 @@
 }
 
 
+
+@article{gould2016,
+	title = {Antibiotics: from prehistory to the present day},
+	author = {Gould, Kate},
+	year = {2016},
+	month = {03},
+	date = {2016-03-01},
+	journal = {Journal of Antimicrobial Chemotherapy},
+	pages = {572--575},
+	volume = {71},
+	number = {3},
+	doi = {10.1093/jac/dkv484},
+	url = {https://doi.org/10.1093/jac/dkv484}
+}
+
+@article{Bassett1980,
+	title = {Tetracycline-Labeled Human Bone from Ancient Sudanese Nubia (A.D. 350)},
+	author = {Bassett, Everett J. and Keith, Margaret S. and Armelagos, George J. and Martin, Debra L. and Villanueva, Antonio R.},
+	year = {1980},
+	month = {09},
+	date = {1980-09-26},
+	journal = {Science},
+	pages = {1532--1534},
+	volume = {209},
+	number = {4464},
+	doi = {10.1126/science.7001623},
+	url = {http://dx.doi.org/10.1126/science.7001623},
+	langid = {en}
+}
