--- a/origin.qmd
+++ b/origin.qmd
@@ -1,25 +1,19 @@
+---
+bibliography: references.bib
+---
+
 # Origins of antibiotic therapy
 
-# Preface {.unnumbered}
+## Antibiotic prehistory
 
-This is the website for the 2nd edition of **"R for Data Science"**. This book will teach you how to do data science with R: You'll learn how to get your data into R, get it into the most useful structure, transform it and visualize.
+The origin of the *modern* *antibiotic therapy* is often linked to Paul Erlich's discovery of arsphenamine (Salvarsan) in 1909 followed by Alexander Fleming's discovery of penicillin in 1928.
+
+However, there is considerable evidence that naturally-available treatments, including herbs, honey and mouldy bread had been used for centuries as topical antimicrobial therapies in ancient Egypt, China, Serbia, Greece and Rome.[@gould2016] Indeed, the benefits of using mould extracts were already well-documented by the herbalist and apothecary John Parkison in his book *Theatrum botanicum.* published in 1640.
 
 ::: column-margin
-![John Parkinson (1567– 1650). The first person to document the use of moulds to treat infections.](images/Parkinson.png){#fig-Parkinson width="400"}
+![John Parkinson (1567– 1650). The first person to document the use of mould extracts to treat infections. image source: Wikipedia.](images/Parkinson.png){#fig-Parkinson width="200"}
 :::
 
-This website is and will always be free, licensed under the [CC BY-NC-ND 3.0](https://creativecommons.org/licenses/by-nc-nd/3.0/us/) License. If you'd like a physical copy of the book, you can order it on [Amazon](https://www.amazon.com/dp/1492097403?&tag=hadlwick-20). If you appreciate reading the book for free and would like to give back, please make a donation to [Kākāpō Recovery](https://www.doc.govt.nz/kakapo-donate): the [kākāpō](https://www.youtube.com/watch?v=9T1vfsHYiKY) (which appears on the cover of R4DS) is a critically endangered parrot native to New Zealand; there are only 248 left.
+Even "modern" antibiotics may have been available in ancient times. Traces of tetracyclines have been detected in human skeletons recovered in Nubia from the time of Roman occupation of Egypt despite the fact that this class of antibiotics was not technically "discovered" in the modern era until 1945. [@Bassett1980] Therefore the actual origin of antibiotics use remains a point for historical debate.
 
-If you speak another language, you might be interested in the freely available translations of the 1st edition:
-
--   [Spanish](http://es.r4ds.hadley.nz)
--   [Italian](https://it.r4ds.hadley.nz)
--   [Turkish](https://tr.r4ds.hadley.nz)
-
-You can find suggested answers to exercises in the book at <https://mine-cetinkaya-rundel.github.io/r4ds-solutions>.
-
-Please note that R4DS uses a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html). By contributing to this book, you agree to abide by its terms.
-
-## Acknowledgements {.unnumbered}
-
-R4DS is hosted by <https://www.netlify.com> as part of their support of open source software and communities.
+## The dawn of bacteriology
