--- a/origin.qmd
+++ b/origin.qmd
@@ -8,12 +8,14 @@ bibliography: references.bib
 
 The origin of the *modern* *antibiotic therapy* is often linked to Paul Erlich's discovery of arsphenamine (Salvarsan) in 1909 followed by Alexander Fleming's discovery of penicillin in 1928.
 
-However, there is considerable evidence that naturally-available treatments, including herbs, honey and mouldy bread had been used for centuries as topical antimicrobial therapies in ancient Egypt, China, Serbia, Greece and Rome.[@gould2016] Indeed, the benefits of using mould extracts were already well-documented by the herbalist and apothecary John Parkison in his book *Theatrum botanicum.* published in 1640.
+However, there is considerable evidence that naturally-available treatments, including herbs, honey and mouldy bread had been used for centuries as topical antimicrobial therapies in ancient Egypt, China, Serbia, Greece and Rome.[@gould2016]
+
+Even "modern" antibiotics may have been available in ancient times. Traces of tetracyclines have been detected in human skeletons recovered Sudanese Nubiansfrom the time of Roman occupation of Egypt despite the fact that this class of antibiotics was not technically "discovered" in the modern era until 1945. [@Bassett1980]Chemical analysis suggests they were ingesting the antibiotic tetracycline on a regular basis, likely from a special brew of beer [@nelson.etal_2010a].
+
+The benefits of using mould extracts were already well-documented by the herbalist and apothecary John Parkison in his book *Theatrum botanicum.* published in 1640.
 
 ::: column-margin
 ![John Parkinson (1567– 1650). The first person to document the use of mould extracts to treat infections. image source: Wikipedia.](images/Parkinson.png){#fig-Parkinson width="200"}
 :::
-
-Even "modern" antibiotics may have been available in ancient times. Traces of tetracyclines have been detected in human skeletons recovered in Nubia from the time of Roman occupation of Egypt despite the fact that this class of antibiotics was not technically "discovered" in the modern era until 1945. [@Bassett1980] Therefore the actual origin of antibiotics use remains a point for historical debate.
 
 ## The dawn of bacteriology
