--- a/references.bib
+++ b/references.bib
@@ -46,3 +46,17 @@
 	url = {http://dx.doi.org/10.1126/science.7001623},
 	langid = {en}
 }
+
+@article{
+  nelson.etal_2010a,
+  title={Brief communication: Mass spectroscopic characterization of tetracycline in the skeletal remains of an ancient population from Sudanese Nubia 350–550 CE},
+  volume={143},
+  ISSN={1096-8644},
+  url={https://onlinelibrary.wiley.com/doi/abs/10.1002/ajpa.21340},
+  DOI={10.1002/ajpa.21340},
+  note={_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ajpa.21340},
+  number={1},
+  journal={American Journal of Physical Anthropology},
+  author={Nelson, Mark L. and Dinardo, Andrew and Hochberg, Jeffery and Armelagos, George J.},
+  year={2010},
+pages={151–154} }
