--- a/index.qmd
+++ b/index.qmd
@@ -1,15 +1,13 @@
 # Preface
 
-This is the website for the 2nd edition of **"R for Data Science"**. This book will teach you how to do data science with R: You'll learn how to get your data into R, get it into the most useful structure, transform it and visualize.
+This is the website for the 1st Edition of **"Antibiotic Therapy: Discovery, Development and Rationale Clinical Use."** This book will help you learn about the science of antibiotic therapy and resistance, and how antibiotics are classically discovered, refined, developed for clinical use and (hopefully) effectively used in patients. You'll learn why antibiotic discovery is difficult, and why our lack of novel antibiotic development is contributing to perhaps the most important crises in public health and medicine-antibiotic resistance.
 
 In this book, you will find a practicum of skills for data science. Just as a chemist learns how to clean test tubes and stock a lab, you'll learn how to clean data and draw plots---and many other things besides. These are the skills that allow data science to happen, and here you will find the best practices for doing each of these things with R. You'll learn how to use the grammar of graphics, literate programming, and reproducible research to save time. You'll also learn how to manage cognitive resources to facilitate discoveries when wrangling, visualizing, and exploring data.
 
-::: {.column-margin}
+::: column-margin
 We know from *the first fundamental theorem of calculus* that for $x$ in $[a, b]$:
 
-
 $$\frac{d}{dx}\left( \int_{a}^{x} f(u)\,du\right)=f(x).$$
-
 :::
 
 This website is and will always be free, licensed under the [CC BY-NC-ND 3.0](https://creativecommons.org/licenses/by-nc-nd/3.0/us/) License. If you'd like a physical copy of the book, you can order it on [Amazon](https://www.amazon.com/dp/1492097403?&tag=hadlwick-20). If you appreciate reading the book for free and would like to give back, please make a donation to [Kākāpō Recovery](https://www.doc.govt.nz/kakapo-donate): the [kākāpō](https://www.youtube.com/watch?v=9T1vfsHYiKY) (which appears on the cover of R4DS) is a critically endangered parrot native to New Zealand; there are only 248 left.
