--- a/origin.qmd
+++ b/origin.qmd
@@ -6,7 +6,7 @@ bibliography: references.bib
 
 ## Antibiotic prehistory
 
-The beginning of antibiotic discovery is often linked to the screening of chemical dyes for selective antimicrobial activity by Paul Erlichin. Erlich's efforts lead to the discovery of compound #606 (Salvarsan) in 1909, the first effective teatment for syphilis. Erlich's discovery was later followed by Alexander Fleming's discovery of penicillin isolated from the mold *Penicllim notum* in 1928. These discoveries defined the two major branches of antibiotic discovery- *screening of synthestic compounds* and screening of *natural products.* Both strategies have advantages and disadvantages but have resulted in teh discovery of a number of clinically-useful antibiotics.
+The beginning of antibiotic discovery is often linked to the screening of chemical dyes for selective antimicrobial activity by Paul Erlichin. Erlich's efforts lead to the discovery of compound #606 (Salvarsan) in 1909, the first effective teatment for syphilis. Erlich's discovery was later followed by Alexander Fleming's discovery of penicillin isolated from the mold *Penicllim notum* in 1928. These discoveries defined the two major branches of antibiotic discovery- *screening of synthetic compounds* and screening of *natural products.* Both strategies have advantages and disadvantages but have resulted in the discovery of a number of clinically-useful antibiotics. We will come back to Erlich and Fleming in the next chapter.
 
 However, naturally-available treatments, including herbs, honey and moldy bread had been used for centuries as topical antimicrobial therapies in ancient Egypt, Mesopotamia, China, Serbia, Greece and Rome.[@gould2016] Tetracycline antibiotics have been detected in skeletons of the Sudanese Nubians from the time of Roman occupation, despite the fact that this class of antibiotics was not technically "discovered" until 1945. [@Bassett1980] A chemical analysis of the skeletons in 2010 subsequently confirmed that the ancient Nubians were likely exposed to "therapeutic" antibiotic concentrations from routine ingestion of special beer they produced [@fig-beer] that contained fermentation byproducts of *Actinomycetes* spp. [@nelson.etal_2010a]
 
@@ -14,7 +14,7 @@ However, naturally-available treatments, including herbs, honey and moldy bread 
 ![Modern rolling of cylinder seal (c. 2600 – 2350 BCE, Khafajeh, Iraq) showing the consumption of beer through long reed straws. Beer consumption was common in ancient Egypt, Mesopotamia and among the Hittites in today's Turkey (image Courtesy of the Oriental Institute of the University of Chicago)](images/beer.png){#fig-beer width="200"}
 :::
 
-By 1640, the benefits of using mould extracts for treating infected would was described by the herbalist and apothecary John Parkison in his book *Theatrum botanicum* [@fig-Parkinson]. However, what was missing is the concept of microorganisms as a cause of infection or the *Germ Theory of Disease,* which would take another 250 years. Therefore, therapeutic use of antibiotics, as considered in the modern sense, did not occur until after the discovery and description of bacteria.
+By 1640, the benefits of using mold extracts for treating infected would was described by the herbalist and apothecary John Parkison in his book *Theatrum botanicum* [@fig-Parkinson]. However, what was missing is the concept of microorganisms as a cause of infection or the *Germ Theory of Disease,* which would take another 250 years. Therefore, therapeutic use of antibiotics, as considered in the modern sense, did not occur until after the discovery and description of bacteria.
 
 ::: column-margin
 ![John Parkinson (1567– 1650). The first person to document the use of mould extracts to treat infections. image source: Wikipedia.](images/Parkinson.png){#fig-Parkinson width="200"}
